<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/internet"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/menu"
            android:title="@string/menu_menu" />
        <item
            android:id="@+id/nav_cafe"
            android:icon="@drawable/cafe"
            android:title="@string/menu_cafe" />
        <item
            android:id="@+id/random"
            android:icon="@drawable/logob"
            android:title="@string/menu_random" />
    </group>
</menu>
