<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.lec.android.wswe.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
        <action
            android:id="@+id/action_nav_home_to_nav_menu"
            app:destination="@id/nav_menu" />
        <action
            android:id="@+id/action_nav_home_to_nav_cafe"
            app:destination="@id/nav_cafe" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.lec.android.wswe.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_menu"
        android:name="com.lec.android.wswe.ui.menu.MenuFragment"
        android:label="@string/menu_menu"
        tools:layout="@layout/fragment_menu" >
        <action
            android:id="@+id/action_nav_menu_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_cafe"
        android:name="com.lec.android.wswe.ui.cafe.CafeFragment"
        android:label="@string/menu_cafe"
        tools:layout="@layout/fragment_cafe" >
        <action
            android:id="@+id/action_nav_cafe_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
</navigation>